tests/baselines/reference/staticAsIdentifier.errors.txt
tests/cases/compiler/staticAsIdentifier.ts(12,19): error TS1005: ';' expected.
tests/cases/compiler/staticAsIdentifier.ts(16,19): error TS1005: ';' expected.


==== tests/cases/compiler/staticAsIdentifier.ts (2 errors) ====
    class C1 {
        static static
        [x: string]: string;
    }
    
    class C2 {
        static static
        m() {}
    }
    
    class C3 {
        static static p: string;
                      ~
!!! error TS1005: ';' expected.
    }
    
    class C4 {
        static static foo() {}
                      ~~~
!!! error TS1005: ';' expected.
    }
    
    class C5 {
        static static
    }
    
    class C6 {
        static 
        static
    }
    
    class C7 extends C6 {
        static override static
    }
    
    
    